Fixed an issue with duplicating collapse indicators

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -574,6 +574,7 @@ h6 {
 
 .content i.collapse-indicator {
     margin-right: 10px;
+    pointer-events: none;
 }
 
 
